cilium-cli/connectivity/builder/manifests/host-firewall-ingress.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "host-firewall-ingress"
spec:
  nodeSelector: {}
  ingress:
  - fromEntities:
    - health
    - kube-apiserver
    - remote-node
    - world
  - fromEndpoints:
    - matchExpressions:
      - key: name
        operator: NotIn
        values:
        - client
      - { key: io.cilium.k8s.policy.cluster, operator: Exists }
